--- a/templates/home3.html
+++ b/templates/home3.html
@@ -14,24 +14,33 @@
                     <div class="intro-text">
                         <span class="name"><b class=" text-primary">mira</b><b class="text-secondary"> saves</b></span>
                         <hr class="star-light">
-                        <span class="skills">PTSD Flashback Management Technology</span>
+                        <span class="skills"></span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="" id="about">
+    <section class="" id="app">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Introducing Mira For PTSD</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>Mira Saves seeks to develop technology to assist those suffering from dissociative PTSD. Our product is a communication platform paired with a personal virtual assistant made to provide in-the-moment symptom management for clients as well as useful treatment data for psychologists.</p>
+                <div class="col-lg-4 center-block">
+                    <img style="width: 100%" src="/static/images/app1.png">
+                    <p>Treat Dissociative Symptoms</p>
+                </div>
+                <div class="col-lg-4 center-block">
+                    <img style="width: 100%" src="/static/images/app2.png">
+                    <p>Automatically Generate a Recovery Journal</p>
+                </div>
+                <div class="col-lg-4 center-block">
+                    <img style="width: 100%" src="/static/images/app3.png">
+                    <p>Empower Treatment Experience</p>
                 </div>
 {#                <div class="col-lg-8 col-lg-offset-2 text-center">#}
 {#                    <a href="/about" class="btn btn-lg btn-success">#}
@@ -43,133 +52,61 @@
     </section>
 
     <!-- About Section -->
-    <section id="experience" class="dark">
+    <section id="join" class="dark">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Facts</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                <div class="col-lg-6 text-center">
+                    <h2 class="section-heading btn btn-outline">Join Patient Beta</h2>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/static/images/ptsd.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>24.4 million</h4>
-                                    <h4 class="subheading" >PTSD sufferers in the United States</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted-light">Automated a process to attach metadata to incoming media before it is encoded for air<br><br>Implemented a system to track the physical location of LTO tapes across three libraries in case of a critical failure<br><br>Created an application to intelligently archive media during times of low utilization, increasing productivity by reducing time in queue</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/static/images/dissociation.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4> 30%</h4>
-                                    <h4 class="subheading">Experience dissociative symptoms</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted-light">Developed proof of concept Android App using Bluetooth LE for a wireless lighting controller<br><br>Designed QA testing procedure and app to test Bluetooth lighting controller<br><br>Created several dashboards and reports to track projects and compliance certificates</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/static/images/psycologist.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>173,000</h4>
-                                    <h4 class="subheading">Mental health/psychology professionals in the United States</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted-light">Worked with a small team to develop an app that connects truck drivers with freight, similar to how Uber connects drivers with passengers<br><br>Fulfilled many duties as a co-founder of a startup with a rapid iterative development schedule</p>
-                                </div>
-                            </div>
-                        </li>
-
-
-                    </ul>
+                <div class="col-lg-6 text-center">
+                    <h2 class="section-heading btn btn-outline">Join Therapist Beta</h2>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="skill" id="skills">
+    <section class="skill" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Skills</h2>
+                    <h2>About Mira Saves</h2>
                     <hr class="star-skill">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <ul class="no-bullet skills">
-                        <li><b>Languages</b></li>
-                        <li>Python</li>
-                        <li>Java</li>
-                        <li>Javascript</li>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>C/C++</li>
-                        <li>SQL</li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <ul class="no-bullet skills">
-                        <li><b>Services & Systems</b></li>
-                        <li>AWS </li>
-                        <li>Google Apps</li>
-                        <li>Quantum Scalar</li>
-                        <li>MongoDB</li>
-                        <li>SQL</li>
-                        <li>Flask</li>
-                        <li>Windows</li>
-                        <li>Linux</li>
-                        <li>Android</li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <ul class="no-bullet skills">
-                        <li><b>Software</b></li>
-                        <li>Microsoft Office</li>
-                        <li>-Excel</li>
-                        <li>-Project</li>
-                        <li>-Visio</li>
-                        <li>JetBrains IDE</li>
-                        <li>Eclipse</li>
-                        <li>QT</li>
-                        <li>Android Studio</li>
-                        <li>SolidWorks</li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <ul class="no-bullet skills">
-                        <li><b>Other</b></li>
-                        <li>Basic Circuit Design</li>
-                        <li>Bluetooth LE</li>
-                        <li>Microcontrollers</li>
-                        <li>-HCS12</li>
-                        <li>-Arduino</li>
-                        <li>-Pic</li>
-                        <li>-Raspberry Pi</li>
-                        <li>Soldering</li>
-                    </ul>
+                <div class="col-lg-12">
+                    <p>Founded with the intention of creating innovative, comprehensive treatment for an array of mental illnesses, Mira Saves is developing our first virtual assistant to aid the recovery of people suffering from PTSD. Our technology will provide interactive assistance for the dissociative symptoms of the disorder, a smart log of day-to-day symptoms, and share information about a user’s symptoms with their own psychologist to enhance in session treatment.</p>
                 </div>
             </div>
         </div>
     </section>
 
+
+    <section class="" id="partners">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Partnered With</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2 col-lg-offset-4">
+                    <img style="width: 100%" src="/static/images/partner1.png">
+                    <p></p>
+                </div>
+                <div class="col-lg-2">
+                    <img style="width: 100%" src="/static/images/partner2.png">
+                    <p></p>
+                </div>
+{#                <div class="col-lg-8 col-lg-offset-2 text-center">#}
+{#                    <a href="/about" class="btn btn-lg btn-success">#}
+{#                        <i class="fa fa-book"></i> Read More#}
+{#                    </a>#}
+{#                </div>#}
+            </div>
+        </div>
+    </section>
 {#    <section id="portfolio">#}
 {#        <div class="container">#}
 {#            <div class="row">#}
@@ -288,7 +225,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contact Mira</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -352,22 +289,18 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Greater NY Area</p>
+                        <p>Hoboken NJ</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:greg@gregorymercado.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                                <a href="mailto:info@mirasaves.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/gregory-mercado-a01637106" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Download Resume</h3>
-                        <a href="/static/files/GregoryMercadoResume_2-23-17.pdf" class="btn btn-lg btn-success"><i class="fa fa-download"></i> Download <i class="fa fa-file-pdf-o"></i></a>
                     </div>
                 </div>
             </div>
@@ -376,7 +309,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; GregoryMercado.com 2017
+                        Copyright &copy; Mira Saves LLC 2017
                     </div>
                 </div>
             </div>
