--- a/templates/nav.html
+++ b/templates/nav.html
@@ -40,7 +40,9 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="#page-top">mira <span class="text-secondary">saves</span></a>
+{#        <a class="navbar-brand" href="#page-top">mira <span class="text-secondary">saves</span></a>#}
+                  <img class="navbar-brand" src="/static/images/Mira_App2.png"/>
+
     </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
