--- a/templates/home3.html
+++ b/templates/home3.html
@@ -12,21 +12,20 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name"><b class=" text-primary">mira</b><b class="text-secondary"> saves</b></span>
-                        <hr class="star-light">
-                        <span class="skills"></span>
+{#                        <span class="name"><b class=" text-primary">mira</b><b class="text-secondary"> saves</b></span>#}
+                        <img style="width: 50%" src="/static/images/Mira_Logo.png">
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="" id="app">
+    <section class="bg-light" id="app">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Introducing Mira For PTSD</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
@@ -56,21 +55,69 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center">
-                    <h2 class="section-heading btn btn-outline">Join Patient Beta</h2>
+                    <h2 class="section-heading btn btn-outline" id="pat_join" onclick="pat_join()">Join Patient Beta</h2>
+                    <form name="sentMessage" id="patientForm" style="display: none" action="/signup" method="post" novalidate>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Name</label>
+                                <input type="text" class="form-control" placeholder="Name" name="name" id="patientname" required data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control" placeholder="Email Address" name="email" id="patientemail" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <input type="hidden" name="signup_type" value="patient">
+                        <br>
+                        <div id="patientsuccess"></div>
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <button type="submit" class="btn btn-success btn-lg">Signup</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <h2 class="section-heading btn btn-outline">Join Therapist Beta</h2>
+                    <h2 class="section-heading btn btn-outline" onclick="doc_join()" id="doc_jion">Join Therapist Beta</h2>
+                    <form name="sentMessage" id="doctorForm" action="/signup" method="post" style="display: none" novalidate>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Name</label>
+                                <input type="text" class="form-control" placeholder="Name" name="name" id="doctorname" required data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control" placeholder="Email Address" name="email" id="doctoremail" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <input type="hidden" name="signup_type" value="doctor">
+                        <br>
+                        <div id="doctorsuccess"></div>
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <button type="submit" class="btn btn-success btn-lg">Signup</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="skill" id="about">
+    <section class="bg-light" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Mira Saves</h2>
-                    <hr class="star-skill">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
@@ -221,19 +268,18 @@
 {#            </div>#}
 {#        </div>#}
 {#    </div>#}
-    <section id="contact" class="grey">
+    <section id="contact" class="dark">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Mira</h2>
-                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" action="/contact" method="post" novalidate>
+                    <form name="sentMessage" id="contactForm" method="post" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
