--- a/templates/home3.html
+++ b/templates/home3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MiraSaves</title>
 </head>
 <body>
 {% extends "nav.html" %}
@@ -116,13 +116,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About Mira Saves</h2>
+                    <h2>About MiraSaves</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Founded with the intention of creating innovative, comprehensive treatment for an array of mental illnesses, Mira Saves is developing our first virtual assistant to aid the recovery of people suffering from PTSD. Our technology will provide interactive assistance for the dissociative symptoms of the disorder, a smart log of day-to-day symptoms, and share information about a user’s symptoms with their own psychologist to enhance in session treatment.</p>
+                    <p>Founded with the intention of creating innovative, comprehensive treatment for an array of mental illnesses, MiraSaves is developing our first virtual assistant to aid the recovery of people suffering from PTSD. Our technology will provide interactive assistance for the dissociative symptoms of the disorder, a smart log of day-to-day symptoms, and share information about a user’s symptoms with their own psychologist to enhance in session treatment.</p>
                 </div>
             </div>
         </div>
@@ -272,7 +272,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Mira</h2>
+                    <h2>Contact MiraSaves</h2>
                 </div>
             </div>
             <div class="row">
@@ -355,7 +355,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Mira Saves LLC 2017
+                        Copyright &copy; MiraSaves LLC 2017
                     </div>
                 </div>
             </div>
