--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>{{ title }}</title>
-    <link rel="icon" href="static/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="static/images/Mira_App2.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Patua+One|Poiret+One|Righteous' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/freelancer.css">
