fixed responsive design

--- a/templates/home3.html
+++ b/templates/home3.html
@@ -13,7 +13,7 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
 {#                        <span class="name"><b class=" text-primary">mira</b><b class="text-secondary"> saves</b></span>#}
-                        <img style="width: 50%" src="/static/images/Mira_Logo.png">
+                        <img id="logo" src="/static/images/Mira_Logo.png">
                     </div>
                 </div>
             </div>
