--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -7,6 +7,14 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
+#logo{
+    width: 100%;
+  }
+@media screen and (min-width: 768px){
+  #logo{
+    width: 50%;
+  }
+}
 p {
   font-size: 20px;
 }
@@ -542,7 +550,7 @@ fieldset[disabled] .btn-success.active {
   color: #bbb;
 }
 section h2.section-heading {
-  font-size: 40px;
+  font-size: 2.2em;
   margin-top: 0;
   margin-bottom: 15px;
 }
