--- a/templates/home3.html
+++ b/templates/home3.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-4">
+                <div class="col-lg-2 col-lg-offset-3">
                     <img style="width: 100%" src="/static/images/partner1.png">
                     <p></p>
                 </div>
@@ -146,128 +146,14 @@
                     <img style="width: 100%" src="/static/images/partner2.png">
                     <p></p>
                 </div>
-{#                <div class="col-lg-8 col-lg-offset-2 text-center">#}
-{#                    <a href="/about" class="btn btn-lg btn-success">#}
-{#                        <i class="fa fa-book"></i> Read More#}
-{#                    </a>#}
-{#                </div>#}
+                <div class="col-lg-2">
+                    <img style="width: 100%" src="/static/images/partner3.png">
+                    <p></p>
+                </div>
             </div>
         </div>
     </section>
-{#    <section id="portfolio">#}
-{#        <div class="container">#}
-{#            <div class="row">#}
-{#                <div class="col-lg-12 text-center">#}
-{#                    <h2>Portfolio</h2>#}
-{#                    <hr class="star-primary">#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="row">#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <p>Lights</p>#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="/static/images/led_diode1600.png" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <p>DMXcat</p>#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="/static/images/dmxcat.png" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <p>Pallet</p>#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="/static/images/pallet.jpg" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <p>Labor Tracking</p>#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="img/portfolio/game.png" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <p>Alarm</p>#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#                <div class="col-sm-4 portfolio-item">#}
-{#                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">#}
-{#                        <div class="caption">#}
-{#                            <div class="caption-content">#}
-{#                                <i class="fa fa-search-plus fa-3x"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">#}
-{#                    </a>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </section>#}
-{#    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">#}
-{#        <div class="modal-content">#}
-{#            <div class="close-modal" data-dismiss="modal">#}
-{#                <div class="lr">#}
-{#                    <div class="rl">#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="container">#}
-{#                <div class="row">#}
-{#                    <div class="col-lg-8 col-lg-offset-2">#}
-{#                        <div class="modal-body">#}
-{#                            <h2>Project Title</h2>#}
-{#                            <hr class="star-primary">#}
-{#                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">#}
-{#                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>#}
-{#                            <ul class="list-inline item-details">#}
-{#                                <li>Client:#}
-{#                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>#}
-{#                                    </strong>#}
-{#                                </li>#}
-{#                                <li>Date:#}
-{#                                    <strong><a href="http://startbootstrap.com">April 2014</a>#}
-{#                                    </strong>#}
-{#                                </li>#}
-{#                                <li>Service:#}
-{#                                    <strong><a href="http://startbootstrap.com">Web Development</a>#}
-{#                                    </strong>#}
-{#                                </li>#}
-{#                            </ul>#}
-{#                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+
     <section id="contact" class="dark">
         <div class="container">
             <div class="row">
