--- a/templates/home3.html
+++ b/templates/home3.html
@@ -76,7 +76,12 @@
                         <div id="patientsuccess"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Signup</button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-success btn-lg g-recaptcha"
+                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
+                                        data-callback="YourOnSubmitFn">
+                                    Signup</button>
                             </div>
                         </div>
                     </form>
@@ -103,7 +108,12 @@
                         <div id="doctorsuccess"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Signup</button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-success btn-lg g-recaptcha"
+                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
+                                        data-callback="YourOnSubmitFn">
+                                    Signup</button>
                             </div>
                         </div>
                     </form>
@@ -205,7 +215,12 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-success btn-lg g-recaptcha"
+                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
+                                        data-callback="YourOnSubmitFn">
+                                    Send</button>
                             </div>
                         </div>
                     </form>
