--- a/templates/home3.html
+++ b/templates/home3.html
@@ -80,7 +80,7 @@
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
                                         data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="YourOnSubmitFn">
+                                        data-callback="patient_submit">
                                     Signup</button>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
                                         data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="YourOnSubmitFn">
+                                        data-callback="doctor_submit">
                                     Signup</button>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
                                         data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="YourOnSubmitFn">
+                                        data-callback="contact_submit">
                                     Send</button>
                             </div>
                         </div>
