--- a/templates/home3.html
+++ b/templates/home3.html
@@ -75,12 +75,13 @@
                         <br>
                         <div id="patientsuccess"></div>
                         <div class="row">
+                            <div class="input-group">
+                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                            </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
-                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="recapcall">
                                     Signup</button>
                             </div>
                         </div>
@@ -107,12 +108,13 @@
                         <br>
                         <div id="doctorsuccess"></div>
                         <div class="row">
+                            <div class="input-group">
+                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                            </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
-                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="recapcall">
                                     Signup</button>
                             </div>
                         </div>
@@ -214,12 +216,13 @@
                         <br>
                         <div id="success"></div>
                         <div class="row">
+                            <div class="input-group">
+                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                            </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
                                         class="btn btn-success btn-lg g-recaptcha"
-                                        data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"
-                                        data-callback="recapcall">
                                     Send</button>
                             </div>
                         </div>
