--- a/templates/home3.html
+++ b/templates/home3.html
@@ -81,7 +81,7 @@
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha"
+                                        class="btn btn-success btn-lg g-recaptcha">
                                     Signup</button>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha"
+                                        class="btn btn-success btn-lg g-recaptcha">
                                     Signup</button>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha"
+                                        class="btn btn-success btn-lg g-recaptcha">
                                     Send</button>
                             </div>
                         </div>
