captcha for all

--- a/templates/home3.html
+++ b/templates/home3.html
@@ -76,7 +76,7 @@
                         <div id="patientsuccess"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                                <div id="RecaptchaField1"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
@@ -109,7 +109,7 @@
                         <div id="doctorsuccess"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                                <div id="RecaptchaField2"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
@@ -217,7 +217,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
+                                <div id="RecaptchaField3"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
