--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,7 +22,7 @@
         grecaptcha.render('RecaptchaField3', {'sitekey' : '6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS'});
     };
 </script>
-    <script src='https://www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit" async defer'></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit" async defer></script>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
