captcha for all

--- a/templates/home3.html
+++ b/templates/home3.html
@@ -76,12 +76,12 @@
                         <div id="patientsuccess"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div id="RecaptchaField1"></div>
+                                <div id="pat_cap" class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha">
+                                        class="btn btn-success btn-lg">
                                     Signup</button>
                             </div>
                         </div>
@@ -109,12 +109,12 @@
                         <div id="doctorsuccess"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div id="RecaptchaField2"></div>
+                                <div id="doctor_cap" class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha">
+                                        class="btn btn-success btn-lg">
                                     Signup</button>
                             </div>
                         </div>
@@ -217,12 +217,12 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="input-group">
-                                <div id="RecaptchaField3"></div>
+                                <div id="contact_cap" class="g-recaptcha" data-sitekey="6Lc-STAUAAAAAD7uRBc_9nk8kU5JgoOPVChs5UkS"></div>
                             </div>
                             <div class="form-group col-xs-12">
                                 <button
                                         type="submit"
-                                        class="btn btn-success btn-lg g-recaptcha">
+                                        class="btn btn-success btn-lg">
                                     Send</button>
                             </div>
                         </div>
