--- a/templates/home3.html
+++ b/templates/home3.html
@@ -256,7 +256,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; MiraSaves LLC 2017
+                        Copyright &copy; MiraSaves Inc. 2017
                     </div>
                 </div>
             </div>
